--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # Database (using existing PostgreSQL container)
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+DATABASE_URL="postgresql://goodcode:goodcode_password@localhost:5432/goodcode_db"
 
-# NextAuth  
+# NextAuth
 NEXTAUTH_URL="http://localhost:3005"
 NEXTAUTH_SECRET="your-secret-key-change-in-production"
 
